# pytest-web-api-testing-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: .env  .env.example  config.json  config_dev.json  config_staging.json
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 113734fc7f0e11ab.txt  11bf4635a5ec1a10.txt  11c0a23101064bc2.txt  13b1aa421d5c0467.txt  17e0f9bea407cdbe.txt  18006c04c025ba61.txt  1c096d827af10e42.txt  1d526b1c01d42655.txt  1e1549a6e1e026b0.txt  1e987be837643d25.txt  201c9a0b559f9f2e.txt  231340d2c2c56275.txt  24de8aad8edf6d91.txt  299c623ec7c6df62.txt  2a42142d995025d4.txt  2a5ed49e4554b56c.txt  2aacdecb52109f45.txt  2d372f5c8c9052ab.txt  30ca363b2ab1ce99.txt  35b374631d355f1d.txt  39507c731ffd21cd.txt  39d69195c3339c4a.txt  3b46e36fa8a11ce0.txt  3e327c7be2a54edc.txt  3eeef86ad589d182.txt  3f13c7c5879c4153.txt  418d00a456648551.txt  440ade7f6a5fdbc7.txt  47e161001d99e7ae.txt  4d470116459e1df9.txt  4e515a73cebf994.txt  50e4e6bdbc875190.txt  50eb312807c05dff.txt  5274da6118ce06a5.txt  568121509eedae20.txt  58b3154ebd4eaab8.txt  58d3ed49b4465fc7.txt  5b250b1e23efd632.txt  5c8aa707b8b9cd36.txt  5ddfb675ff1d7f28.txt  (+92 more)
data/test-cases/: 1036a89508fa0c26.json  1228f2d0ee290664.json  1452dd5b67209770.json  14cdb24e1a1d4bef.json  15b083386a1d60a9.json  16b30478b4f32252.json  1afa5c12167265be.json  1b768a07c803ddb0.json  1cdb9a28e266e42f.json  22823d8f2950016d.json  23b7290cd9ce3aef.json  2483c90650332acf.json  258b69e8c9a06fbe.json  264d3aac4e18298c.json  (+118 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+10 files in other folders)
