[project]
name = "pytest-web-api-testing-framework"
version = "1.0.0"
description = "A comprehensive pytest-based testing framework for web UI and API testing"
authors = [
    {name = "yashwant-das", email = "your-email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110  # Or your preferred line length (Black defaults to 88)
# target-version = ['py39', 'py310', 'py311', 'py312', 'py313'] # Specify target Python versions if needed

[tool.isort]
profile = "black"   # Ensures compatibility with Black
line_length = 110   # Match Black's line length
multi_line_output = 3 # For multi-line imports: 3 = Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 110  # Match Black's line length
extend-ignore = [
    "E203", # Whitespace before ':' (often conflicts with Black)
    "W503", # Line break before binary operator (Black prefers after)
    # "E501", # Line too long (handled by Black, but good to have for manual checks)
]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    "reports", # Exclude generated reports
    "allure-results",
    "allure-report",
]
# per-file-ignores = [ # Example: if you have specific files to ignore certain errors for
#     "src/legacy_code.py:F401,E722",
# ]
